docs: Add documentation for show user
